k8s/portfolio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
spec:
  tls:
    - hosts:
      - dacruzoliveira.ca
  ingressClassName: nginx
  rules:
  - host: dacruzoliveira.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-service
            port:
              number: 80
